# word-freq-statistic

./: Cargo.toml  README.md  README_en.md
config/: config.toml
src/: config.rs  core.rs  main.rs
